# swagger-ui-detector

./: .gitattributes  .gitignore  README.md  cli.py  git_searcher.py  requirements.txt  setup.cfg  snyk_parser.py  swagger_classifier.py  swagger_detector.py  swagger_ui_detector.py
src/: cli.py  git_searcher.py  snyk_parser.py  swagger_classifier.py
tests/: snyk_response.html  swagger-ui-bundle.js  swagger-ui.js  test_git_searcher.py  test_snyk_parser.py  test_swagger_classifier.py
