[metadata]
name = swagger-ui-detector
version = 0.0.1

[options]
packages=src
python_requires='>=3'
install_requires =
    bs4
    GitPython
    requests
    packaging
    lxml
    urllib3
    click
    importlib-metadata; python_version < "3.8"


[options.entry_points]
console_scripts = 
    swagger-ui-detector = src.cli:main
