[metadata]
name = swagger-ui-detector
version = 1.0.0-rc.1
author = Miloslav Homer 
author_email = miloslav.homer@gmail.com 
description = Detecting versions of multiple swagger-uis 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ArcHound/swagger-ui-detector 
project_urls =
    Bug Tracker = https://github.com/ArcHound/swagger-ui-detector/issues 
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages=src
python_requires= >= 3.8
install_requires =
    beautifulsoup4
    GitPython >= 3.0.8
    requests
    packaging
    urllib3
    Click
    importlib-metadata; python_version < "3.8"


[options.entry_points]
console_scripts = 
    swagger-ui-detector = src.cli:main
